5-vpc-igw-route.tf
resource "aws_vpc" "vpc" {
  cidr_block       = var.vpc-cidr-block
  enable_dns_hostnames = "true"
}
  tags = {
    Name = var.vpc-name
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
}

resource "aws_route" "pub_route" {
  route_table_id         = aws_vpc.vpc.main_route_table_id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}
